# MasterOfOrion

./: .gitmodules  CMakeLists.txt
docs/dev/: GameStartingModel.puml
docs/techstats/: FORMAT.TXT  MoO2 Win v1.3.scr  original.rul
docs/techstats/tables/: Armors.txt  Artemis_Chance.txt  Base Food per Unit.txt  Base Industry per Unit.txt  Buildings.txt  Map_Gravity.txt  Technologies.txt  Technology Fields.txt  Weapons.txt
moo/: CMakeLists.txt  moo.cpp  moo.h
moo/game/: Game.cpp  Game.h
moo/game/data/: Common.h  Galaxy.h  Star.h  StrongType.h
moo/game/ui/: GalaxyScreen.cpp  GalaxyScreen.h  IScreen.h  ScreenContext.h  StarSystemWindow.cpp  StarSystemWindow.h  StartScreen.cpp  StartScreen.h
moo/graphics/: Environment.cpp  Environment.h  Graphics.cpp  Graphics.h  Input.cpp  Input.h  SdlTypes.h  Texture.cpp  Texture.h
moo/interfaces/: IEnvironment.h  IGraphics.h  IInput.h  IRenderer.h  ITexture.h  ITimeService.h  InterfaceFwd.h  Types.h  Utils.h
moo/math/: Vector.cpp  Vector.h
moo/tests/: CMakeLists.txt  TimerTest.cpp  WindowSubsystemTest.cpp  gametest.cpp
moo/windows/: Button.cpp  Button.h  MenuWindow.cpp  MenuWindow.h  Pane.cpp  Pane.h  StdTimeService.h  TimerFactory.cpp  TimerFactory.h  Window.cpp  Window.h  WindowSystem.cpp  WindowSystem.h
